# multi_agent_decision_ai

./: .gitignore  README.md  architecher.txt  langgraph.json  main.py  pyproject.toml  requirements.txt  struture.md
app/: config.py  data_loader.py  graph.py  langgraph_lrn.ipynb  llm.py  main.py  models.py
app/nodes/: communication.py  financial_risk.py  knowledge_agent.py  market_research.py  strategy_planning.py
backend/: main.py  requirements.txt
backend/api/: http_routes.py  websocket_routes.py
backend/config/: langsmith_config.py  llm_config.py  settings.py
backend/graph/: decision_graph.py  graph_runner.py
backend/memory/: conversation_store.py  session_memory.py
backend/schemas/: agent_state_schema.py  api_models.py
backend/streaming/: agent_step_streamer.py  event_models.py  websocket_manager.py
backend/supervisor/: supervisor_graph.py  supervisor_prompt.py  supervisor_tools.py
backend/utils/: json_helpers.py  request_id.py
backend_1/: main.py  websocket_server.py
backend_1/api/: http_routes.py  websocket_routes.py
backend_1/config/: langsmith_config.py  llm_config.py  settings.py
backend_1/graph/: decision_graph.py  graph_runner.py  graph_state.py
backend_1/memory/: conversation_store.py  session_memory.py
backend_1/schemas/: agent_state_schema.py  api_models.py
backend_1/streaming/: agent_step_streamer.py  event_models.py  websocket_manager.py
backend_1/supervisor/: routing_logic.py  (+4 more)
backend_v2/: main.py  requirements.txt
backend_v3/: main.py  requirements.txt
ra_agent_1/: README.md
static/: index.html
(+233 files in other folders)
