[project]
name = "multi-agent-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.1",
    "langchain==0.1.20",
    "langchain-community==0.0.38",
    "langchain-core==0.1.52",
    "langgraph==0.0.45",
    "openai>=2.28.0",
    "requests>=2.32.5",
    "tiktoken>=0.12.0",
    "uvicorn>=0.41.0",
    "yfinance>=1.2.0",
]
